fixing input field to be empty when the amount validation is visible. hiding the amount validation text when the input is valid. adding css styles.

--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -30,3 +30,13 @@
   color: var(--light);
   margin: 0.3rem 0.2rem;
 }
+
+.closeBtn:hover,
+.orderBtn:hover {
+  opacity: 70%;
+}
+
+.closeBtn:active,
+.orderBtn:active {
+  opacity: 50%;
+}
